--- a/src/app/shared/dashboard/dashboard.component.html
+++ b/src/app/shared/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
   
      
   
-      <button mat-button (click)="onLogout()">
+      <button mat-button>
         Logout
       </button>
   
@@ -42,7 +42,7 @@
   
     <div class="container p-2">
   
-      <router-outlet></router-outlet> <!--Esto la primera vez que se inicia la pagina me redireciona a lis-page segun las rutas predefinidas-->
+      <router-outlet></router-outlet>
   
     </div>
   
