--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -1,1 +1,55 @@
-<p>register works!</p>
+<form [formGroup]="miFormulario" (ngSubmit)="registrar()">
+    <div class="flex flex-column">
+      <span class="text-lg mb-4">Registro</span>
+  
+      <mat-form-field>
+        <mat-label>RUT</mat-label>
+        <input type="text" matInput formControlName="rut" placeholder="RUT">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Nombre</mat-label>
+        <input type="text" matInput formControlName="nombre" placeholder="Nombre">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Apellidos</mat-label>
+        <input type="text" matInput formControlName="apellidos" placeholder="Apellidos">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email" placeholder="Email">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Contraseña</mat-label>
+        <input type="password" matInput formControlName="password" placeholder="Contraseña">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Fecha de Nacimiento</mat-label>
+        <input type="date" matInput formControlName="fecha_nacimiento">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Teléfono</mat-label>
+        <input type="text" matInput formControlName="telefono" placeholder="Teléfono">
+      </mat-form-field>
+  
+      <mat-form-field>
+        <mat-label>Dirección</mat-label>
+        <input type="text" matInput formControlName="direccion" placeholder="Dirección">
+      </mat-form-field>
+  
+      <button mat-button mat-flat-button color="primary" type="submit">
+        <mat-icon>save</mat-icon>
+        Registrar
+      </button>
+  
+      <div class="flex justify-content-end mt-5">
+        <a routerLink="/auth/login">¿Ya tienes cuenta?</a>
+      </div>
+    </div>
+  </form>
+  
