--- a/src/app/admin/pages/gestionar-pacientes/agregar-paciente/agregar-paciente.component.html
+++ b/src/app/admin/pages/gestionar-pacientes/agregar-paciente/agregar-paciente.component.html
@@ -2,19 +2,28 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h2 class="text-center mb-4">Formulario de Registro de Paciente</h2>
-        <form [formGroup]="formulario" (ngSubmit)="enviar()">
+        <form [formGroup]="formulario"
+         (ngSubmit)="crearPaciente()">
           <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="nombres">Nombres</label>
-              <input type="text" class="form-control" id="nombres" formControlName="nombres" placeholder="Nombres">
+            <div class="form-group col-md-6 mb-3">
+              <label for="rut_paciente">Rut</label>
+              <input type="text" class="form-control" id="rut_paciente" formControlName="rut" placeholder="rut">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-3">
+              <label for="nombres">Nombres</label>
+              <input type="text" class="form-control" id="nombres" formControlName="nombre" placeholder="Nombres">
+            </div>
+            <div class="form-group col-md-6 mb-3">
               <label for="apellidos">Apellidos</label>
               <input type="text" class="form-control" id="apellidos" formControlName="apellidos" placeholder="Apellidos">
             </div>
+            <div class="form-group col-md-6 mb-3">
+              <label for="apellidos">Password</label>
+              <input type="password" class="form-control" id="password" formControlName="password" placeholder="password">
+            </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-3">
               <label for="email">Email</label>
               <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email">
               <div *ngIf="formulario.get('email')?.hasError('required') && formulario.get('email')?.touched" class="text-danger">
@@ -24,17 +33,17 @@
                 El email no es válido.
               </div>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-3">
               <label for="fechaNacimiento">Fecha de Nacimiento</label>
-              <input type="date" class="form-control" id="fechaNacimiento" formControlName="fechaNacimiento">
+              <input type="date" class="form-control" id="fechaNacimiento" formControlName="fecha_nacimiento">
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-3">
               <label for="telefono">Teléfono</label>
               <input type="tel" class="form-control" id="telefono" formControlName="telefono" placeholder="Teléfono">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-3">
               <label for="genero">Género</label>
               <select class="form-control" id="genero" formControlName="genero">
                 <option value="masculino">Masculino</option>
@@ -43,7 +52,7 @@
               </select>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group mb-3">
             <label for="direccion">Dirección</label>
             <input type="text" class="form-control" id="direccion" formControlName="direccion" placeholder="Dirección">
           </div>
