--- a/src/app/admin/pages/gestionarHorariosMedicos/agregar-horario/agregar-horario.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/agregar-horario/agregar-horario.component.html
@@ -1,28 +1,55 @@
-<form [formGroup]="horarioMedicoForm">
-    <div class="form-group">
-      <label for="nombreDia">Nombre del Día</label>
-      <input type="text" class="form-control" id="nombreDia" formControlName="nombreDia" placeholder="Nombre del Día">
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h2 class="text-center mb-4">Formulario de Registro de Horario Médico</h2>
+      <form [formGroup]="horarioMedicoForm" (ngSubmit)="crearHorario()">
+        <div class="form-group mt-3">
+          <label for="diaSemana">Día de la Semana</label>
+          <input type="text" class="form-control" id="diaSemana" formControlName="diaSemana" placeholder="Lunes">
+        </div>
+        <div class="form-group mt-3">
+          <label for="horaInicio">Hora de Inicio</label>
+          <input type="time" class="form-control" id="horaInicio" formControlName="horaInicio" placeholder="08:00:00">
+        </div>
+        <div class="form-group mt-3">
+          <label for="horaFinalizacion">Hora de Finalización</label>
+          <input type="time" class="form-control" id="horaFinalizacion" formControlName="horaFinalizacion" placeholder="12:00:00">
+        </div>
+        <div class="form-group mt-3">
+          <label for="horaInicioColacion">Hora de Inicio de Colación</label>
+          <input type="time" class="form-control" id="horaInicioColacion" formControlName="hora_inicio_colacion" placeholder="12:30:00">
+        </div>
+        <div class="form-group mt-3">
+          <label for="horaFinColacion">Hora de Fin de Colación</label>
+          <input type="time" class="form-control" id="horaFinColacion" formControlName="hora_fin_colacion" placeholder="13:00:00">
+        </div>
+        <div class="form-group mt-3">
+          <label for="duracionCitas">Duración de Citas (minutos)</label>
+          <input type="number" class="form-control" id="duracionCitas" formControlName="duracionCitas" placeholder="30">
+        </div>
+        <div class="form-group">
+          <label for="rutMedico">Médico</label>
+          <select class="form-control" id="rutMedico" formControlName="rut_medico">
+            <option [value]="null">Selecciona un médico</option>
+            <option *ngFor="let medico of medicos" [value]="medico.id">{{ medico.nombre }} (RUT: {{ medico.id }})</option>
+          </select>
+        </div>
+        <div class="form-group mt-3">
+          <label for="disponibilidad">Disponibilidad</label>
+          <select class="form-control" id="disponibilidad" formControlName="disponibilidad">
+            <option *ngFor="let opcion of disponibilidadOpciones" [value]="opcion.valor">
+              {{ opcion.etiqueta }}
+            </option>
+          </select>
+        </div>
+        
+        
+        <div class="form-group mt-3">
+          <label for="fechaCreacion">Fecha de Creación</label>
+          <input type="datetime-local" class="form-control" id="fechaCreacion" formControlName="fechaCreacion">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block mt-3">Registrar Horario Médico</button>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="horaInicio">Hora de Inicio</label>
-      <input type="time" class="form-control" id="horaInicio" formControlName="horaInicio">
-    </div>
-    <div class="form-group">
-      <label for="horaFin">Hora de Finalización</label>
-      <input type="time" class="form-control" id="horaFin" formControlName="horaFin">
-    </div>
-    <div class="form-group">
-      <label for="intervaloCitas">Intervalo entre Citas (minutos)</label>
-      <input type="number" class="form-control" id="intervaloCitas" formControlName="intervaloCitas">
-    </div>
-    <div class="form-group">
-      <label for="inicioColacion">Hora de Inicio de Colación</label>
-      <input type="time" class="form-control" id="inicioColacion" formControlName="inicioColacion">
-    </div>
-    <div class="form-group">
-      <label for="finColacion">Hora de Finalización de Colación</label>
-      <input type="time" class="form-control" id="finColacion" formControlName="finColacion">
-    </div>
-    <button type="submit" class="btn btn-primary">Guardar Horario</button>
-  </form>
-  
+  </div>
+</div>
