--- a/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas.component.html
@@ -1,4 +1,3 @@
-
 <div class="row animated fadeIn fast">
     <div class="col-12">
         <div class="card">
@@ -20,7 +19,7 @@
         <!-- Contenido principal aquí -->
       </div>
       <div class="col-auto">
-        <a routerLink="/agregar-tipo-cita" class="btn btn-primary">Agregar tipo de cita</a>
+        <a routerLink="/agregar-horario-medico" class="btn btn-primary">Agregar tipo Cita</a>
       </div>
     </div>
   </div>
@@ -33,53 +32,49 @@
                 <h6 class="card-subtitle">Usuarios registrados en mi aplicacion</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th class="w100">Nombre</th>
-                                <th>Duracion</th>
-                                <th>Precio</th>
-                                <th>descripcion</th>
-                                <th>Especialidad</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="text-center"> <!--Abrir modal se activa cuando se hace click en la umagen del usuario (se le pasa el usuario de la imagen)-->
-                                </td>
-                                <td></td>                         
-                                <td></td>              
-                                
-                                
-                                <td>
-                                    <!-- si el usuario selecciona la opción "Admin" en el <select>, el valor del 
-                                        usuario.role se actualizará a "ADMIN_ROLE" (como aparece en los option del select)
-                                        . Si el usuario selecciona la opción "User", el valor del usuario.role se 
-                                        actualizará a "USER_ROLE eso es porque usuario.role esta enlazado al ngModel es decir
-                                        que cuando el usuario le de click a alguna de las opciones se activa el evento change lo que hace que se active la funcion cambiar rol"-->
-                             
-                                </td>
+                      <thead>
+                        <tr>
+         
+                          <th>ID </th>
+                          <th>Tipo cita</th>
+                          <th>Precio</th>
+                          <th>Especialidad Medica</th>
 
-                                <!--ESTO ES PARA QUE EN LA TABLA EN EL APARTADO DE AUTH APAREZCA SI EL USUARIO ES DE GOOGLE O UN USUARIO NORMAL QUE SE REGISTRO EN LA PAGINA-->
-                                <td>
-                                
-                                </td>
-           
-                               
-                                
-                                <!--SIMBOLITO PARA ELIMINAR USUARIO-->
-                                <td class="text-nowrap text-center">
-                                    <a data-toggle="tooltip"
-                                     data-original-title="Borrar"
-                                     class="cursor"
-                                     > <!--SE ENVIA A LA FUNCION EL USUARIO QUE SE QUIERE ELIMINAR CUANDO SE LE HACE CLICK AL SIMBOLITO EL QUE SE CRE EN EL NG*FOR DE ARRIBA-->
-                                         <i class="fa fa-close text-danger"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
+
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let tipocita of tiposCitas">
+                          <td>{{tipocita.idTipo}}</td>
+                          <td>{{tipocita.tipo_cita}}</td>
+                          <td>{{tipocita.especialidad_medica}}</td>
+                          <td>{{tipocita.color_etiqueta}}</td>
+
+              <td>
+                <div class="icon-container">
+                    <a class="cursor"
+                      data-toggle="tooltip" 
+                      data-original-title="Borrar"
+                      (click)="borrarTipoCita( tipocita )"> 
+                      <i class="fa fa-close text-danger"></i> 
+                    </a>
+                  </div>
+                  <div class="icon-container">
+                    <a class="cursor"
+                      data-toggle="tooltip" 
+                      data-original-title="Editar"
+                    > 
+                      <i class="fa fa-pencil text-primary"></i> 
+                    </a>
+                  </div>
+                </td>
+                
+                
+                
+                        </tr>
+                      </tbody>
                     </table>
-                </div>
+                  </div>
                 <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
                 <div> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
                     <button  class="btn btn-secondary">Anteriores</button>
@@ -92,5 +87,3 @@
     </div>
 
 </div>
-
-
