--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -3,8 +3,8 @@
     <span class="text-lg mb-4">Login</span>
 
     <mat-form-field>
-      <mat-label>Usuario</mat-label>
-      <input type="text" matInput formControlName="username" placeholder="Nombre de usuario">
+      <mat-label>Email</mat-label>
+      <input type="text" matInput formControlName="email" placeholder="email de usuario">
     </mat-form-field>
 
     <mat-form-field>
@@ -18,7 +18,10 @@
     </button>
 
     <div class="flex justify-content-end mt-5">
-      <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
+      <a routerLink="/auth/register">¿Ya tienes cuenta?</a>
+    </div>
+    <div class="flex justify-content-end mt-1">
+      <a routerLink="/auth/register">¿Olvidaste contraseña?</a>
     </div>
   </div>
 </form>
