--- a/src/app/admin/pages/gestionar-medicos/editar-medico/editar-medico.component.html
+++ b/src/app/admin/pages/gestionar-medicos/editar-medico/editar-medico.component.html
@@ -6,8 +6,8 @@
         (ngSubmit)="editarMedico()">
           <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="id">id</label>
-                <input type="text" class="form-control" id="nombre" formControlName="id" placeholder="Ingresar rut">
+                <label for="id">Rut</label>
+                <input type="text" class="form-control" id="nombre" formControlName="rut" placeholder="Ingresar rut">
               </div>
             <div class="form-group col-md-6">
               <label for="nombre">Nombre</label>
