--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -18,10 +18,10 @@
     </button>
 
     <div class="flex justify-content-end mt-5">
-      <a routerLink="/auth/register">¿Ya tienes cuenta?</a>
+      <a routerLink="/auth/register">Crear cuenta</a>
     </div>
     <div class="flex justify-content-end mt-1">
-      <a routerLink="/auth/register">¿Olvidaste contraseña?</a>
+      <a routerLink="/auth/recuperarPassword">¿Olvidaste contraseña?</a>
     </div>
   </div>
 </form>
