--- a/src/app/auth/pages/password/password.component.html
+++ b/src/app/auth/pages/password/password.component.html
@@ -1,27 +1,27 @@
-<form >
-    <div class="flex flex-column">
-      <span class="text-lg mb-4">Recuperar contraseña</span>
-  
-      <mat-form-field>
-        <mat-label>Email</mat-label>
-        <input type="text" matInput formControlName="email" placeholder="Usuario">
-      </mat-form-field>
-  
-      <mat-form-field>
-        <mat-label>Contraseña</mat-label>
-        <input type="password" matInput formControlName="password" placeholder="Email">
-      </mat-form-field>
-  
-      <button mat-button mat-flat-button color="primary" type="submit">
-        <mat-icon>save</mat-icon>
-        Recuperar contraseña
-      </button>
-  
-      <div class="flex justify-content-end mt-5">
-        <a routerLink="/auth/register">¿No se ha registrado?</a>
-        <a routerLink="/auth/login">Ir a login</a>
-      </div>
-   
+<form [formGroup]="recoveryForm" (ngSubmit)="recuperarPassword()">
+  <div class="flex flex-column">
+    <span class="text-lg mb-4">Recuperar contraseña</span>
+
+    <mat-form-field>
+      <mat-label>Usuario</mat-label>
+      <input type="text" matInput formControlName="nombre" placeholder="nombre">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Email</mat-label>
+      <input type="email" matInput formControlName="email" placeholder="Email">
+    </mat-form-field>
+
+    <button mat-button mat-flat-button color="primary" type="submit" [disabled]="!recoveryForm.valid">
+      <mat-icon>save</mat-icon>
+      Recuperar contraseña
+    </button>
+
+    <div class="flex justify-content-end mt-5">
+      <a routerLink="/auth/register">¿No se ha registrado?</a>
+      <a routerLink="/auth/login">Ir a login</a>
     </div>
-  </form>
+  </div>
+</form>
+
   
