--- a/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
+++ b/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
@@ -1,1 +1,36 @@
+<div class="container mt-5">
+  <h2 class="text-center mb-4">Formulario Cita</h2>
+  <div class="form-container">
+    <form [formGroup]="form" (ngSubmit)="enviarFormulario()">
+      <div class="mb-2">Seleccione un Tipo de cita</div>
 
+      <!-- Nota cómo utilizo formControlName en cada input -->
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="tipoCita" value="general">
+        <label class="form-check-label">
+          Consulta General
+        </label>
+      </div>
+      <div class="form-check mb-4">
+        <input class="form-check-input" type="radio" formControlName="tipoCita" value="especialidad">
+        <label class="form-check-label">
+          Especialidad
+        </label>
+      </div>
+
+      <div class="form-group" *ngIf="form.get('tipoCita')?.value === 'especialidad'">
+        <label for="especialidad">Seleccione una especialidad:</label>
+        <select formControlName="especialidad">
+          <option *ngFor="let tipo of tiposCitas" [value]="tipo.especialidad_medica">{{ tipo.especialidad_medica }}</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="fecha">Fecha:</label>
+        <input type="date" class="form-control" id="fecha" formControlName="fecha">
+      </div>
+
+      <button type="submit" class="btn btn-primary mt-3">Buscar médicos disponibles</button>
+    </form>
+  </div>
+</div>
